      python function, and wrap those with shell
    - remove a couple of subcommand shell outs by using native python calls
  * setup.py, ssh_import_id/__init__.py:
    - bump major version to 5.0, major changes here
  * debian/rules, setup.py:
    - add scripts back to setup.py
  * ssh_import_id/__init__.py:
    - add extra blank line back, for readability

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 18:32:55 -0500

ssh-import-id (4.5-0ubuntu1) wily; urgency=medium

  [ Andres Riancho and Dustin Kirkland ]
  * bin/ssh-import-id-gh: LP: #1397332
    - handle two github error conditions (rate limiting and user
      not found)

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 18:32:53 -0500

ssh-import-id (4.4-0ubuntu1) wily; urgency=medium

  * bin/ssh-import-id-gh, bin/ssh-import-id-lp, setup_helpers.py,
    setup.py: LP: #1428840
    - make ssh-import-id work with both python2.7 and python3
    - revert previous changes with classifiers and testing for
      python3

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 18:15:51 -0500

ssh-import-id (4.3-0ubuntu1) wily; urgency=medium

  * === added symlink README, setup.py, === target is uREADME.md:
    - fix setup.py classifiers
  * setup.py:
    - require 3.2 final
  * setup.py (properties changed: -x to +x):
    - make executable

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 17:52:27 -0500

ssh-import-id (4.2-0ubuntu1) wily; urgency=medium

  [ Barry Warsaw and Dustin Kirkland ]
  * setup_helpers.py, setup.py:
    - ensure that pypi/pip installs require python3,
      https://github.com/cmars/ssh-import-id/issues/6

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 Oct 2015 17:44:17 -0500

ssh-import-id (4.1-0ubuntu1) vivid; urgency=medium

  * setup.py:
    - clean up some whitespace and indenting issues

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 06 Jan 2015 14:39:26 -0600

ssh-import-id (4.0-0ubuntu1) utopic; urgency=low

  [ Andrew Starr-Bochicchio ]