@@ -18,6 +18,7 @@ Package: ssh-import-id
 Architecture: all
 Depends: ca-certificates,
          openssh-client,
+         python3-pkg-resources,
          python3-requests (>= 1.1.0),
          wget,
          ${misc:Depends},
